5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1716_2498.log
== TEST (2019-05-08 08:05:35) 
-- CODE:
# definicao das variaveis para coleta das entradas
ha = int(input("Numero de habitantes de uma cidade A: "))
hb = int(input("Numero de habitantes de uma cidade B: "))
ca = float(input("Percentual de crescimento de uma cidade A: "))
cb = float(input("Percentual de crescimento de uma cidade B: "))

hca = ha
hcb = hb
t = 0

while(hca <= hcb):
	hca = hca + (ha*ca/100)
	hcb = hcb + (hb*cb/100)
	t = t+1
	print(t)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 20:55:19) 
-- CODE:
# definicao das variaveis para coleta das entradas
ha = int(input("Numero de habitantes de uma cidade A: "))
hb = int(input("Numero de habitantes de uma cidade B: "))
ca = float(input("Percentual de crescimento de uma cidade A: "))
cb = float(input("Percentual de crescimento de uma cidade B: "))

hca = ha
hcb = hb
t = 0


hca = hca + (ha*(ca/100))
hcb = hcb + (hb*(cb/100))
t = t+1
print(t)
print(hca)
print(hcb)
-- OUTPUT:
1
338953.25
640900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 20:56:39) 
-- CODE:
# definicao das variaveis para coleta das entradas
ha = int(input("Numero de habitantes de uma cidade A: "))
hb = int(input("Numero de habitantes de uma cidade B: "))
ca = float(input("Percentual de crescimento de uma cidade A: "))
cb = float(input("Percentual de crescimento de uma cidade B: "))

hca = ha
hcb = hb
t = 0


hca = hca + (ha*ca/100)
hcb = hcb + (hb*cb/100)
t = t+1
print(t)
print(hca)
print(hcb)
-- OUTPUT:
1
338953.25
640900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 21:03:50) 
-- CODE:
# definicao das variaveis para coleta das entradas
ha = int(input("Numero de habitantes de uma cidade A: "))
hb = int(input("Numero de habitantes de uma cidade B: "))
ca = float(input("Percentual de crescimento de uma cidade A: "))
cb = float(input("Percentual de crescimento de uma cidade B: "))

t = 0

while(hca <= hcb):
	hca = hca + (ha*ca/100)
	hcb = hcb + (hb*cb/100)
	t = t+1
	print(t)
	print(hca)
	print(hcb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(hca <= hcb):
NameError: name 'hca' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 21:05:23) 
-- CODE:
# definicao das variaveis para coleta das entradas
ha = int(input("Numero de habitantes de uma cidade A: "))
hb = int(input("Numero de habitantes de uma cidade B: "))
ca = float(input("Percentual de crescimento de uma cidade A: "))
cb = float(input("Percentual de crescimento de uma cidade B: "))

t = 0

while(ha <= hb):
	ha = ha + (ha*ca/100)
	hb = hb + (hb*cb/100)
	t = t+1
	print(t)
	print(ha)
	print(hb)
-- OUTPUT:
1
338953.25
640900.0
2
459281.65375
708194.5
3
622326.64083125
782554.9225
4
843252.5983263438
864723.1893625
5
1142607.2707321958
955519.1242455625
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 21:05:46) 
-- CODE:
# definicao das variaveis para coleta das entradas
ha = int(input("Numero de habitantes de uma cidade A: "))
hb = int(input("Numero de habitantes de uma cidade B: "))
ca = float(input("Percentual de crescimento de uma cidade A: "))
cb = float(input("Percentual de crescimento de uma cidade B: "))

t = 0

while(ha <= hb):
	ha = ha + (ha*ca/100)
	hb = hb + (hb*cb/100)
	t = t+1
	print(t)
	print(ha)
	print(hb)
-- OUTPUT:
1
338953.25
640900.0
2
459281.65375
708194.5
3
622326.64083125
782554.9225
4
843252.5983263438
864723.1893625
5
1142607.2707321958
955519.1242455625
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 21:06:29) 
-- CODE:
# definicao das variaveis para coleta das entradas
ha = int(input("Numero de habitantes de uma cidade A: "))
hb = int(input("Numero de habitantes de uma cidade B: "))
ca = float(input("Percentual de crescimento de uma cidade A: "))
cb = float(input("Percentual de crescimento de uma cidade B: "))

t = 0

while(ha <= hb):
	ha = ha + (ha*ca/100)
	hb = hb + (hb*cb/100)
	t = t+1
	print(t)
	print(ha)
	print(hb)
-- OUTPUT:
1
338953.25
640900.0
2
459281.65375
708194.5
3
622326.64083125
782554.9225
4
843252.5983263438
864723.1893625
5
1142607.2707321958
955519.1242455625
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 21:07:45) 
-- CODE:
# definicao das variaveis para coleta das entradas
ha = int(input("Numero de habitantes de uma cidade A: "))
hb = int(input("Numero de habitantes de uma cidade B: "))
ca = float(input("Percentual de crescimento de uma cidade A: "))
cb = float(input("Percentual de crescimento de uma cidade B: "))

t = 0

while(ha <= hb):
	ha = ha + (ha*ca/100)
	hb = hb + (hb*cb/100)
	t = t+1
	print(t)
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 21:08:35) 
-- CODE:
# definicao das variaveis para coleta das entradas
ha = int(input("Numero de habitantes de uma cidade A: "))
hb = int(input("Numero de habitantes de uma cidade B: "))
ca = float(input("Percentual de crescimento de uma cidade A: "))
cb = float(input("Percentual de crescimento de uma cidade B: "))

t = 0

while(ha <= hb):
	ha = ha + (ha*ca/100)
	hb = hb + (hb*cb/100)
	t = t+1
print(t)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 21:09:03) 
-- CODE:
# definicao das variaveis para coleta das entradas
ha = int(input("Numero de habitantes de uma cidade A: "))
hb = int(input("Numero de habitantes de uma cidade B: "))
ca = float(input("Percentual de crescimento de uma cidade A: "))
cb = float(input("Percentual de crescimento de uma cidade B: "))

t = 0

while(ha <= hb):
	ha = ha + (ha*ca/100)
	hb = hb + (hb*cb/100)
	t = t+1
print(t)
-- EXECUTION TIME:
0.1399
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
